 * Any status byte could now break SysEx sequence. We only    swallow SysEx end byte (F7) when it's the expected one.    Should fix #4445.  * Implement device remove handling.    Which should fix #4053.

Please test it.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33159 a95241bf-73f2-0310-859d-f6bbb57e9c96